LTIMessage - updated new URI() to new URI().toURL()